<?xml version="1.0"?>
<package format="2">
  <name>tb3_control</name>
  <version>0.0.0</version>
  <description>rospy package to control TurtleBot3</description>
  <maintainer email="nitin@todo.todo">nitin</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
</package>